istio/visualization-kiali/02_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - kiali-gateway
  http:
    - match:
        - port: 15029
      route:
        - destination:
            host: kiali
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - match:
        - port: 15031
      route:
        - destination:
            host: grafana
            port:
              number: 3000
